syntax = "proto3";

option go_package = "github.com/Fantom-foundation/go-lachesis/src/inter/wire";

package wire;

message InternalTransaction {
  uint64 Index = 1;
  uint64 Amount = 2;
  string Receiver = 3;
  uint64 UntilBlock = 4;
}

message ExtTxns {
  repeated bytes List = 2;
}

message Event {
  uint64 Index = 1;
  string Creator = 2;
  repeated bytes Parents = 3;
  uint64 LamportTime = 4;
  repeated InternalTransaction InternalTransactions = 5;
  oneof ExternalTransactions {
    ExtTxns ExtTxnsValue = 6;
    bytes ExtTxnsHash = 7;
  }
  string Sign = 8;
  bool IsConfirmed = 9;
}

message Block {
  uint64 Index = 1;
  repeated bytes Events = 2;
}
